--- a/src/client/style.css
+++ b/src/client/style.css
@@ -702,39 +702,70 @@
 }
 
 #gameScoreBoard {
+  display: none;
+  grid-template-columns: 2fr 1fr;
   position: absolute;
   color: white;
-  width: 200px;
-  height: auto;
-  top: 40%;
+  width: 300px;
+  height: 450px;
+  top: 20%;
   right: 10px;
   z-index: 10;
   background-color: #000000b2;
 }
 
-#usernameIndex,
-#usernameScore,
-.multiUsernameIndex,
-.multiUsernameScore {
-  height: 20px;
-  width: 90px;
-  padding-top: 10px;
-}
-
-#personal, #others {
-  display: inline-block;
-  min-height: 20px;
+#left,
+#othersLeft,
+#userLeft,
+#right {
   width: 100%;
-  box-sizing: border-box; 
 }
 
-.multiUsernameIndex, #usernameIndex {
-  float: left;
-  padding-left: 10px;
+#right {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 450px;
 }
 
-.multiUsernameScore, #usernameScore {
-  text-align: right;
-  float: right;
-  padding-right: 10px;
+#progressWrapper {
+  position: relative;
+  right: 0;
+  height: 100%;
 }
+
+#progressBar {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  height: 100%;
+  background: linear-gradient(#9198e5, #e6646400);
+  width: 55px;
+}
+
+#left .userScore, .userIndex {
+  display: inline-block;
+  height: 45px;
+  width: 95px;
+  font-size: 1.5vw;
+  text-align: center;
+  line-height: 200%;
+}
+
+.profilePhoto {
+  display: none;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  max-width: 45px;
+  max-height: 45px;
+  border-radius: 25px;
+  height: 45px;
+  width: 100%;
+  font-size: 1.5vw;
+  text-align: center;
+  line-height: 200%;
+}
+
